# rag-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.mcp-test.yml  compose.yaml  implementation-roadmap.md  legacy-compat-matrix.md  librechat.yaml  migration.md  test_final.txt  workspace-bootstrap.md
.github/ISSUE_TEMPLATE/: dev-ticket.yml  epic.yml  user-story.yml
.github/workflows/: ci.yml  governance.yml
bins/legacy-proxy.rs/: Cargo.toml
bins/legacy-proxy.rs/src/: main.rs
bins/mcp-gateway.rs/: Cargo.toml
bins/mcp-gateway.rs/src/: main.rs
bins/rag-api.rs/: Cargo.toml
bins/rag-api.rs/src/: main.rs
bins/rag-mcp.rs/: Cargo.toml
bins/rag-mcp.rs/src/: main.rs
crates/app-runtime/: Cargo.toml
crates/app-runtime/src/: lib.rs
crates/cache-lock/: Cargo.toml
crates/cache-lock/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/legacy-compat/: Cargo.toml
crates/legacy-compat/src/: lib.rs
crates/mcp-api/: Cargo.toml
crates/mcp-api/src/: lib.rs
crates/openai-compat/: Cargo.toml
crates/openai-compat/src/: lib.rs
crates/storage-qdrant/: Cargo.toml
crates/storage-qdrant/src/: lib.rs
data-node/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1433248115608086432.wt  collection-1-7951878502080205262.wt  collection-13-7951878502080205262.wt  collection-2-1433248115608086432.wt  collection-2-7951878502080205262.wt  collection-21-7951878502080205262.wt  collection-28-7951878502080205262.wt  collection-4-1433248115608086432.wt  collection-4-7951878502080205262.wt  collection-44-7951878502080205262.wt  collection-48-7951878502080205262.wt  collection-6-7951878502080205262.wt  collection-9-7951878502080205262.wt  index-1-1433248115608086432.wt  index-10-7951878502080205262.wt  index-110-7951878502080205262.wt  index-112-7951878502080205262.wt  index-113-7951878502080205262.wt  index-117-7951878502080205262.wt  index-12-7951878502080205262.wt  index-120-7951878502080205262.wt  index-121-7951878502080205262.wt  index-127-7951878502080205262.wt  index-129-7951878502080205262.wt  index-131-7951878502080205262.wt  index-132-7951878502080205262.wt  index-134-7951878502080205262.wt  index-135-7951878502080205262.wt  index-137-7951878502080205262.wt  index-144-7951878502080205262.wt  index-146-7951878502080205262.wt  index-15-7951878502080205262.wt  index-156-7951878502080205262.wt  index-158-7951878502080205262.wt  index-159-7951878502080205262.wt  index-160-7951878502080205262.wt  index-162-7951878502080205262.wt  (+40 more)
data-node/diagnostic.data/: metrics.2026-04-14T10-57-42Z-00000  metrics.2026-04-14T10-57-46Z-00000  metrics.2026-04-14T11-03-41Z-00000  metrics.2026-04-14T11-53-44Z-00000  metrics.2026-04-14T11-56-09Z-00000  metrics.2026-04-15T06-50-17Z-00000  metrics.2026-04-15T07-04-50Z-00000  metrics.2026-04-15T07-39-27Z-00000  metrics.2026-04-15T10-02-34Z-00000  metrics.2026-04-15T11-07-41Z-00000  metrics.2026-04-15T12-29-06Z-00000  metrics.2026-04-15T14-05-38Z-00000  metrics.2026-04-16T09-26-44Z-00000  metrics.2026-04-16T09-43-51Z-00000  metrics.2026-04-16T11-04-37Z-00000  metrics.2026-04-16T11-25-59Z-00000  metrics.2026-04-16T11-54-20Z-00000  metrics.2026-04-20T07-25-33Z-00000  metrics.2026-04-20T12-04-05Z-00000  metrics.2026-04-20T17-25-29Z-00000  metrics.2026-04-21T12-44-40Z-00000  metrics.2026-04-21T13-55-07Z-00000  metrics.2026-04-21T14-11-23Z-00000  metrics.2026-04-21T16-51-33Z-00000  metrics.interim
docs/: compatibility_design_spec.md  gateway-guide.md  mcp-testing-guide.md  rag_implementation_report.md  testing-and-gateway.md  testing_guide.md  walkthrough.md
docs/api/: openapi.yaml
docs/testing/: README.md
logs/: .17d4e6c8483cfbbea95e279384eb8e769625b85c-audit.json  .2514b4db699b79245b225fd9f04a25dd896bfa78-audit.json  .3c8f00094946c5ee5458bfe4c1e9be87e296065b-audit.json
