[workspace]
members = [
  "crates/core",
  "crates/storage-qdrant",
  "crates/openai-compat",
  "crates/ingest",
  "crates/cache-lock",
  "crates/http-api",
  "crates/mcp-api",
  "crates/legacy-compat",
  "crates/app-runtime",
  "bins/rag-api.rs",
  "bins/rag-mcp.rs",
  "bins/legacy-proxy.rs",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v5", "v7"] }
