[package]
name = "rag-mcp-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rag-app-runtime = { path = "../../crates/app-runtime" }
rag-mcp-api = { path = "../../crates/mcp-api" }
