[package]
name = "rag-app-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rag-core = { path = "../core" }
rag-openai-compat = { path = "../openai-compat" }
rag-storage-qdrant = { path = "../storage-qdrant" }
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
