[package]
name = "rag-legacy-compat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rag-core = { path = "../core" }

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
http-body-util = "0.1"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
