[package]
name = "rag-mcp-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rag-core = { path = "../core" }
